// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly with all sentiments renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with all sentiments renders correctly sentiment info 1`] = `
<DocumentFragment>
  .css-a128rg-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #e0f2ff;
  color: #005da3;
  border-left: 4px solid #005da3;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-a128rg-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.5C6.41015 3.5 3.5 6.41015 3.5 10C3.5 13.5899 6.41015 16.5 10 16.5C13.5899 16.5 16.5 13.5899 16.5 10C16.5 6.41015 13.5899 3.5 10 3.5ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM9.25 6.97917C9.25 6.56495 9.58579 6.22917 10 6.22917H10.006C10.4203 6.22917 10.756 6.56495 10.756 6.97917V6.98521C10.756 7.39942 10.4203 7.73521 10.006 7.73521H10C9.58579 7.73521 9.25 7.39942 9.25 6.98521V6.97917ZM9.49411 10.1396C9.18572 10.1803 8.87194 10.0251 8.72501 9.73124C8.53977 9.36076 8.68994 8.91025 9.06042 8.72501L9.09385 8.7083C10.1286 8.1909 11.2938 9.12555 11.0132 10.2479L10.5059 12.2771C10.8143 12.2363 11.1281 12.3916 11.275 12.6854C11.4602 13.0559 11.3101 13.5064 10.9396 13.6916L10.9062 13.7084L10.9062 13.7084C9.87136 14.2258 8.70622 13.2911 8.98682 12.1687L9.49411 10.1396Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with all sentiments renders correctly sentiment success 1`] = `
<DocumentFragment>
  .css-csathi-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #daf6ec;
  color: #22674e;
  border-left: 4px solid #22674e;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-csathi-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM12.847 7.59001C13.1738 7.82347 13.2495 8.27769 13.016 8.60454L9.98575 12.847C9.86149 13.0209 9.66698 13.1314 9.45393 13.149C9.24087 13.1667 9.03085 13.0897 8.87968 12.9385L7.0615 11.1203C6.77748 10.8363 6.77748 10.3758 7.0615 10.0918C7.34552 9.80778 7.806 9.80778 8.09002 10.0918L9.30114 11.3029L11.8324 7.7591C12.0659 7.43225 12.5201 7.35655 12.847 7.59001Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with all sentiments renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .css-1hp5mca-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #fff6e6;
  color: #7c5400;
  border-left: 4px solid #7c5400;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-1hp5mca-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-kctixj-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  margin-left: 40px;
}

.css-kctixj-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-kctixj-StyledFilledButton-StyledButton:active {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.css-kctixj-StyledFilledButton-StyledButton:hover,
.css-kctixj-StyledFilledButton-StyledButton:active {
  background: #d6175c;
  color: #f9f9fa;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
      <button
        class="e17p0ih01 css-kctixj-StyledFilledButton-StyledButton e112qvla2"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with children as component 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p>
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-o00wx5-StyledGhostButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.css-o00wx5-StyledGhostButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-o00wx5-StyledGhostButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-o00wx5-StyledGhostButton-CloseButton:hover,
.css-o00wx5-StyledGhostButton-CloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
    <button
      aria-label="close"
      class="e17p0ih00 css-o00wx5-StyledGhostButton-CloseButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with default values 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with disabled 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1bd7bz7-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  background: #ffd3e3;
  color: #ffffff;
  margin-left: 40px;
}

.css-1bd7bz7-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
      <button
        class="e17p0ih01 css-1bd7bz7-StyledFilledButton-StyledButton e112qvla2"
        disabled=""
        type="button"
      >
        button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with title 1`] = `
<DocumentFragment>
  .css-11mx9hk-Stack-StyledStackContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  padding: 16px;
  background-color: #ffebf2;
  color: #b3144d;
  border-left: 4px solid #b3144d;
}

.css-13ic1ao-Stack-WrapStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.css-102e6lf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ji4m6z-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1ji4m6z-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-4ixw4c-Stack-TextStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-18yznsf-StyledText {
  color: #b3144d;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-11mx9hk-Stack-StyledStackContainer-alertStyles e17p0ih04"
  >
    <div
      class="css-13ic1ao-Stack-WrapStack e17p0ih02"
    >
      <div
        class="css-102e6lf-Stack ehpbis70"
      >
        <svg
          class="css-1ji4m6z-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="css-4ixw4c-Stack-TextStack e17p0ih03"
        >
          <span
            class="css-18yznsf-StyledText e13y3mga0"
          >
            title
          </span>
          <p
            class="css-1e8qouo-StyledText e13y3mga0"
          >
            Sample Alert
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
